# Merge-Bench

./: .gitignore  .pylintrc  README.md  clean_cache.py  eval.py  eval_all_models.sh  eval_java_models.sh  eval_sft_models.sh  example_evaluation.py  mypy.ini  pyproject.toml
eval_outputs2/c/anthropic/claude-opus-4/: example_0.txt  example_1.txt  example_10.txt  example_100.txt  example_101.txt  example_102.txt  example_103.txt  example_104.txt  example_105.txt  example_106.txt  example_107.txt  example_108.txt  example_109.txt  example_11.txt  example_110.txt  example_111.txt  example_112.txt  example_113.txt  example_115.txt  example_116.txt  example_117.txt  example_118.txt  example_119.txt  example_12.txt  example_120.txt  example_121.txt  example_122.txt  example_123.txt  example_124.txt  example_125.txt  example_126.txt  example_127.txt  example_128.txt  example_129.txt  example_13.txt  example_130.txt  example_131.txt  example_132.txt  example_133.txt  example_134.txt  (+158 more)
eval_outputs2/c/deepseek/deepseek-r1-0528/: example_0.txt  example_1.txt  example_10.txt  example_100.txt  example_101.txt  example_102.txt  example_103.txt  example_104.txt  example_105.txt  example_106.txt  example_107.txt  example_108.txt  example_109.txt  example_11.txt  (+182 more)
openai/o3-pro/: example_36.txt
repos_reaper_test/test/o3/: example_1.txt  example_10.txt  example_101.txt  example_102.txt  example_104.txt  example_105.txt  example_106.txt  example_107.txt  example_108.txt  example_109.txt  example_112.txt  example_113.txt  example_115.txt  example_117.txt  example_118.txt  example_120.txt  example_123.txt  example_124.txt  example_125.txt  example_130.txt  example_131.txt  example_132.txt  example_135.txt  example_137.txt  example_138.txt  example_141.txt  example_142.txt  example_143.txt  example_145.txt  example_147.txt  example_149.txt  example_15.txt  example_150.txt  example_151.txt  example_153.txt  example_154.txt  example_155.txt  example_156.txt  example_158.txt  example_159.txt  (+408 more)
src/: __init__.py  api_model.py  evaluation_metrics.py  model_factory.py  model_interface.py  plot_performance_table.py  sft_model.py  unsloth_model.py  utils.py  variables.py
src/scripts/: build_performance_table.sh  eval_api_models.sh  plot_performance_table.py
tables/: java_results_table.md  java_results_table.tex  performance_summary_table.md  performance_summary_table.tex  results_table.md  results_table.tex  results_table_wrapper.tex  sft_results_table.md  sft_results_table.tex
(+17451 files in other folders)
