[project]
name = "merge-bench"
version = "0.1.0"
description = "A benchmarking toolkit for evaluating Large Language Models on merge conflict resolution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Benedikt Schesch"},
]
keywords = ["merge-conflicts", "llm", "evaluation", "benchmark"]

dependencies = [
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "datasets>=2.14.0",
    "openai>=1.0.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.3",
    "pylint>=3.2.7",
]

[project.optional-dependencies]
unsloth = [
    "unsloth>=2025.3.18",
    "vllm==0.7.3"
]

[project.urls]
Homepage = "https://github.com/benedikt-schesch/Merge-Bench"
Repository = "https://github.com/benedikt-schesch/Merge-Bench"
Issues = "https://github.com/benedikt-schesch/Merge-Bench/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
